<resources>
    <string name="app_name">TuBLISTT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already have an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Do not have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="during_fruiting_stage_do_not_water_late_in_the_afternoon_this_practice_promotes_rotting_of_fruits">•During fruiting stage, do not water late in the afternoon. This practice promotes rotting of fruits.</string>
    <string name="management">MANAGEMENT</string>
    <string name="the_affected_part_of_the_fruit_appears_as_a_firm_rot_lesions_are_light_brown_white_mycelia_of_the_fungus_grows_at_the_edge_of_the_lesion_unripe_fruits_are_also_infected_by_the_pathogen">The affected part of the fruit appears as a firm rot. Lesions are light brown. White mycelia of the fungus grows at the edge of the lesion. Unripe fruits are also infected by the pathogen.</string>
    <string name="symptoms">SYMPTOMS</string>
    <string name="anthracnose">Anthracnose</string>
    <string name="local_name_longtot">Local name: Longtot</string>
    <string name="use_of_black_plastic_mulch_to_prevent_fruits_from_touching_the_soil">•Use of black plastic mulch to prevent fruits from touching the soil.</string>
    <string name="remove_and_burn_infected_plant_materials_don_t_leave_them_in_the_canals_or_in_between_plots">•Remove and burn infected plant materials. Don\'t leave them in the canals or in between plots.</string>
    <string name="on_infected_berries_light_brown_spots_appear_which_increase_rapidly_until_the_whole_fruit_becomes_brown_and_rotten_gray_dusty_mold_fungal_mycelium_and_spores_develops_on_affected_part_of_the_fruit_both_green_and_red_fruit_are_susceptible_to_infection_however_the_disease_develops_faster_on_ripe_fruits">On infected berries, light brown spots appear which increase rapidly until the whole fruit becomes brown and rotten. Gray dusty mold (fungal mycelium and spores) develops on affected part of the fruit. Both green and red fruit are susceptible to infection. However, the disease develops faster on ripe fruits.</string>
    <string name="gray_mold_rot">Gray mold rot</string>
    <string name="local_name_bu_ot">Local name: Bu-ot</string>
    <string name="remove_and_bury_infected_fruits_to_minimize_the_spread_of_the_disease">•Remove and bury infected fruits to minimize the spread of the disease</string>
    <string name="plant_disease_free_planting_materials_and_use_resistant_varieties_that_are_available">Plant disease-free planting materials and use resistant varieties that are available.</string>
    <string name="todo">TODO</string>
    <string name="spots_are_colored_brown_to_black_and_irregular_in_shape_symptoms_may_oocur_on_the_leaf_blade_leaf_margins_or_leaf_tips">Spots are colored brown to black and irregular in shape. Symptoms may oocur on the leaf blade, leaf margins or leaf tips.</string>
    <string name="leaf_blight">Leaf blight</string>
    <string name="local_name_lagit">Local name: Lagit</string>
    <string name="apply_recommended_rate_of_nitrogen_fertilizer_for_strawberry">•Apply recommended rate of nitrogen fertilizer for strawberry.</string>
    <string name="sanitation_can_be_supplemented_with_spraying_of_recommended_fungicide_preferably_when_leaves_of_plants_are_dry">•Sanitation can be supplemented with spraying of recommended fungicide preferably when leaves of plants are dry.</string>
    <string name="irregularly_shaped_purple_spots_occur_on_leaves_the_spots_may_later_enlarge_or_merge_into_brown_lesions_that_look_burnt_fruiting_bodies_grow_at_the_center_of_the_old_spots">Irregularly-shaped purple spots occur on leaves. The spots may later enlarge or merge into brown lesions that look burnt. Fruiting bodies grow at the center of the old spots.</string>
    <string name="leaf_scorch">Leaf scorch</string>
    <string name="local_name_tatek">Local name: Tatek</string>
    <string name="sanitation_can_be_supplemented_with_proper_timing_of_spray_using_recommended_fungicides">•Sanitation can be supplemented with proper timing of spray using recommended fungicides.</string>
    <string name="circular_spots_on_affected_leaves_measure_from_1_8_to_1_4_inch_in_diameter_the_disease_differ_from_scorch_in_that_spots_are_dry_and_whitish_gray_at_the_center_black_seed_infection_may_extend_to_fruit_stalks_stolons_and_calyces">Circular spots on affected leaves measure from 1/8 to 1/4 inch in diameter. The disease differ from scorch in that spots are dry and whitish gray at the center \'black seed\'. Infection may extend to fruit stalks, stolons and calyces.</string>
    <string name="leaf_spot">Leaf spot</string>
    <string name="local_name_tatek_or_latek">Local name: Tatek or Latek</string>
    <string name="sanitation_practices_such_as_removal_and_proper_disposal_by_burying_or_burning_of_infected_leaves">•Sanitation practices such as removal and proper disposal by burying or burning of infected leaves.</string>
    <string name="know_more">Analyze another disease</string>
</resources>
